# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
### Fixed
- [FRONTEND] [CLONE] Resolve GUI loading problems when cloning an existing Frontend
- [FRONTEND] [FILEBEAT] Avoid overriding default module config for all Frontends when changed in one

## [2.9.0] - 2023-07-20
### Removed
- [LOG_FORWARDER] [ELASTICSEARCH] RateLimit settings
### Added
- [API_PARSER] New collector **SentinelOne Mobile**
- [API_PARSER] NEW collector **CSC_DOMAINMANAGER**
- [LOG_FORWARDER] Disk-assisted queues for reliability
- [PORTAL] [IDP] Refresh token support through OAuth2 flow
### Changed
- [VOCABULARY] Replace 'slave' word uses with 'replica'
- [NETWORK] Improve the way Node IPs are updated on disk
- [NETIF] [API] Only return from API call when refresh has been finished
- [DEPENDENCIES] Python dependencies upgrade
    - django 3.2.19 -> 3.2.20
    - cryptography 41.0.1 -> 41.0.2
### Fixed
- [PORTAL] [OPENID] Improve error returns and code quality
- [SYSTEM] [CERTIFICATES] Protect used certificates when attempted to be deleted
- [SYSTEM] [CERTIFICATES] Reload HAProxy on certificate change
- [ACLS] Rebuild HAProxy conf on ACL change
- [LOGFORWARDER] [ELASTICSEARCH] Enable ELS>=8 compatibility
- [LOGFORWARDER] [ELASTICSEARCH] Ensure index patterns are kept to lowercase
- [LOGFORWARDER] [ELASTICSEARCH] Avoid newline problems in generated configurations
- [CLUSTER_JOIN] New node couldn't resolve all other nodes' name and IP
- [CLUSTER_JOIN] New node missed an initial Rsyslog configuration file
- [NODE] [CONFIGURATION] Correctly update rc.conf when editing a Node on GUI/API
- [REFRESH_NIC] Correctly get DHCP-enabled interfaces' IP
- [API_PARSER] [SENTINEL_ONE] Fix authorization token type for service user accounts
- [API_PARSER] [CYBEREASON] FIx timestamp for `malware` logs