@@ -36,7 +36,7 @@ module(load="omrelp")
 module(load="omuxsock")
 
 # Log Forwarders templates used to render file name or index name
-{% for log_forwarder in log_forwarders %}
+{% for log_forwarder in log_forwarders -%}
 {{ log_forwarder.get_rsyslog_template() }}
 {% endfor %}
 
